sort.basic.bubble.AlgBubbleSort1.scala.error
Erreur de compilation :
AlgBubbleSort1:4: error: Missing closing brace `}' assumed here
def bubbleSort()  {
^AlgBubbleSort1:4: error: expected class or object definition
def bubbleSort()  {
^AlgBubbleSort1:6: error: Missing closing brace `}' assumed here
var change:Boolean=false;
^AlgBubbleSort1:6: error: expected class or object definition
var change:Boolean=false;
^AlgBubbleSort1:8: error: expected class or object definition
do {
^